删除无用的验证码图像文件，并在代码中添加CNN字符分割的详细流程和示例

--- a/collection_data/generate_captcha.ipynb
+++ b/collection_data/generate_captcha.ipynb
@@ -2,124 +2,203 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "验证码已生成到 captcha.jpg，内容：WG22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image, ImageDraw, ImageFont, ImageFilter\n",
     "import random\n",
     "import string\n",
     "import os\n",
+    "from datetime import datetime\n",
     "\n",
-    "# 配置参数\n",
-    "WIDTH = 100                 # 图片宽度\n",
-    "HEIGHT = 35                 # 图片高度\n",
-    "FONT_PATHS = [              # 尝试加载的字体路径\n",
-    "    'arial.ttf',\n",
-    "    '/usr/share/fonts/truetype/dejavu/DejaVuSans.ttf',\n",
-    "    '/Library/Fonts/Arial.ttf',\n",
-    "    'C:/Windows/Fonts/arial.ttf'\n",
-    "]\n",
-    "OUTPUT_FILE = 'captcha.jpg'  # 输出文件名\n",
+    "class CaptchaConfig:\n",
+    "    \"\"\"验证码生成配置参数类\"\"\"\n",
+    "    def __init__(self):\n",
+    "        # 图像尺寸\n",
+    "        self.width = 120\n",
+    "        self.height = 45\n",
+    "        \n",
+    "        # 字体配置\n",
+    "        self.font_paths = [\n",
+    "            'arial.ttf',\n",
+    "            os.path.join(os.path.dirname(os.getcwd()), 'fonts/arial.ttf'),\n",
+    "            '/usr/share/fonts/truetype/dejavu/DejaVuSans.ttf',\n",
+    "            '/Library/Fonts/Arial.ttf',\n",
+    "            'C:/Windows/Fonts/arial.ttf'\n",
+    "        ]\n",
+    "        self.font_size_range = (24, 32)     # 字体大小范围\n",
+    "        \n",
+    "        # 验证码内容配置\n",
+    "        self.char_count = 4                 # 字符数量\n",
+    "        self.char_set = string.digits + string.ascii_letters  # 使用的字符集\n",
+    "        \n",
+    "        # 干扰元素配置\n",
+    "        self.initial_noise = 30             # 初始噪点数量\n",
+    "        self.initial_lines = 3              # 初始干扰线数量\n",
+    "        self.final_noise = 50               # 最终噪点数量\n",
+    "        self.final_lines = 2                # 最终干扰线数量\n",
+    "        \n",
+    "        # 视觉效果参数\n",
+    "        self.rotation_range = (-30, 30)     # 字符旋转角度范围\n",
+    "        self.offset_range = (-5, 5)         # 字符位置偏移范围\n",
+    "        self.color_range = (50, 150)        # 字符颜色RGB分量范围\n",
+    "        self.bg_color = (255, 255, 255)     # 背景颜色\n",
+    "        \n",
+    "        # 输出配置\n",
+    "        self.output_dir = os.path.join(os.path.dirname(os.getcwd()), 'data/generate')\n",
+    "        self.file_suffix = 'png'            # 文件格式\n",
     "\n",
-    "def generate_captcha():\n",
-    "    # 创建图像和绘图对象\n",
-    "    image = Image.new('RGB', (WIDTH, HEIGHT), (255, 255, 255))\n",
+    "\n",
+    "def generate_captcha(config=CaptchaConfig()):\n",
+    "    \"\"\"生成验证码并保存到文件\"\"\"\n",
+    "    # 初始化画布\n",
+    "    image = Image.new('RGB', (config.width, config.height), config.bg_color)\n",
     "    draw = ImageDraw.Draw(image)\n",
     "\n",
-    "    # 查找可用字体\n",
-    "    font_path = None\n",
-    "    for path in FONT_PATHS:\n",
+    "    try:\n",
+    "        # 加载字体文件\n",
+    "        font_path = _load_font(config.font_paths)\n",
+    "        \n",
+    "        # 生成随机验证码\n",
+    "        captcha_text = _generate_random_string(config.char_count, config.char_set)\n",
+    "        \n",
+    "        # 添加初始干扰元素\n",
+    "        _add_noise(draw, config.width, config.height, config.initial_noise)\n",
+    "        _add_interference_lines(draw, config.width, config.height, config.initial_lines)\n",
+    "\n",
+    "        # 绘制验证码字符\n",
+    "        for idx, char in enumerate(captcha_text):\n",
+    "            char_img = _create_char_image(\n",
+    "                char=char,\n",
+    "                font_path=font_path,\n",
+    "                font_size=random.randint(*config.font_size_range),\n",
+    "                color=(\n",
+    "                    random.randint(*config.color_range),\n",
+    "                    random.randint(*config.color_range),\n",
+    "                    random.randint(*config.color_range)\n",
+    "                ),\n",
+    "                rotation=random.randint(*config.rotation_range)\n",
+    "            )\n",
+    "            \n",
+    "            # 计算字符位置\n",
+    "            x_pos = idx * (config.width / config.char_count)\n",
+    "            x_offset = random.randint(*config.offset_range)\n",
+    "            y_offset = random.randint(*config.offset_range)\n",
+    "            position = (\n",
+    "                int(x_pos + (config.width/config.char_count - char_img.width)/2 + x_offset),\n",
+    "                int((config.height - char_img.height)/2 + y_offset)\n",
+    "            )\n",
+    "            \n",
+    "            # 合并字符图像\n",
+    "            image.paste(char_img, position, char_img)\n",
+    "\n",
+    "        # 添加最终干扰元素\n",
+    "        _add_noise(draw, config.width, config.height, config.final_noise)\n",
+    "        _add_interference_lines(draw, config.width, config.height, config.final_lines)\n",
+    "        image = image.filter(ImageFilter.SMOOTH)\n",
+    "\n",
+    "        # 保存文件\n",
+    "        filename = _generate_filename(captcha_text, config.file_suffix)\n",
+    "        os.makedirs(config.output_dir, exist_ok=True)\n",
+    "        output_path = os.path.join(config.output_dir, filename)\n",
+    "        image.save(output_path, quality=95)\n",
+    "        \n",
+    "        return output_path, captcha_text\n",
+    "    except Exception as e:\n",
+    "        raise RuntimeError(f\"验证码生成失败: {str(e)}\") from e\n",
+    "\n",
+    "\n",
+    "def _load_font(font_paths):\n",
+    "    \"\"\"加载第一个可用的字体文件\"\"\"\n",
+    "    for path in font_paths:\n",
     "        if os.path.exists(path):\n",
-    "            font_path = path\n",
-    "            break\n",
-    "    if not font_path:\n",
-    "        raise FileNotFoundError(\"未找到可用字体文件\")\n",
+    "            return path\n",
+    "    raise FileNotFoundError(f\"未找到可用字体，尝试路径: {font_paths}\")\n",
     "\n",
-    "    # 生成随机验证码（4位）\n",
-    "    characters = ''.join(random.choices(string.digits + string.ascii_letters, k=4))\n",
     "\n",
-    "    # 第一次添加干扰元素（底层）\n",
-    "    _add_noise(draw, density=30)\n",
-    "    _add_interference_lines(draw, num_lines=3)\n",
+    "def _generate_random_string(length, char_set):\n",
+    "    \"\"\"生成随机字符串\"\"\"\n",
+    "    return ''.join(random.choices(char_set, k=length))\n",
     "\n",
-    "    # 绘制验证码字符\n",
-    "    for i, char in enumerate(characters):\n",
-    "        # 随机字符参数\n",
-    "        font_size = random.randint(20, 30)\n",
-    "        rotation = random.randint(-25, 25)\n",
-    "        x_offset = random.randint(-8, 8)\n",
-    "        y_offset = random.randint(-8, 8)\n",
-    "        char_color = (random.randint(0, 150), random.randint(0, 150), random.randint(0, 150))\n",
-    "\n",
-    "        # 创建字符图像\n",
-    "        char_image = _create_char_image(char, font_path, font_size, char_color, rotation)\n",
-    "        \n",
-    "        # 计算位置（四等分区域）\n",
-    "        x = i * (WIDTH/4) + (WIDTH/4 - char_image.width)/2 + x_offset\n",
-    "        y = (HEIGHT - char_image.height)/2 + y_offset\n",
-    "        \n",
-    "        # 合并到主图像\n",
-    "        image.paste(char_image, (int(x), int(y)), char_image)\n",
-    "\n",
-    "    # 第二次添加干扰元素（上层）\n",
-    "    _add_noise(draw, density=50)\n",
-    "    _add_interference_lines(draw, num_lines=2)\n",
-    "    image = image.filter(ImageFilter.SMOOTH)\n",
-    "\n",
-    "    # 保存结果\n",
-    "    image.save(OUTPUT_FILE)\n",
-    "    print(f\"验证码已生成到 {OUTPUT_FILE}，内容：{characters}\")\n",
     "\n",
     "def _create_char_image(char, font_path, font_size, color, rotation):\n",
-    "    \"\"\"生成单个字符的旋转图像\"\"\"\n",
+    "    \"\"\"创建单个字符的旋转图像\"\"\"\n",
     "    font = ImageFont.truetype(font_path, font_size)\n",
     "    \n",
-    "    # 创建临时图像（足够大以容纳旋转）\n",
-    "    temp_image = Image.new('RGBA', (font_size*2, font_size*2), (0, 0, 0, 0))\n",
-    "    temp_draw = ImageDraw.Draw(temp_image)\n",
+    "    # 创建足够大的临时画布\n",
+    "    temp_img = Image.new('RGBA', (font_size*3, font_size*3), (0, 0, 0, 0))\n",
+    "    temp_draw = ImageDraw.Draw(temp_img)\n",
     "    \n",
-    "    # 绘制字符（居中）\n",
-    "    bbox = temp_draw.textbbox((0,0), char, font=font)\n",
-    "    x = (temp_image.width - (bbox[2]-bbox[0]))/2 - bbox[0]\n",
-    "    y = (temp_image.height - (bbox[3]-bbox[1]))/2 - bbox[1]\n",
-    "    temp_draw.text((x, y), char, font=font, fill=color)\n",
+    "    # 计算居中位置\n",
+    "    bbox = temp_draw.textbbox((0, 0), char, font=font)\n",
+    "    position = (\n",
+    "        (temp_img.width - (bbox[2] - bbox[0]))/2 - bbox[0],\n",
+    "        (temp_img.height - (bbox[3] - bbox[1]))/2 - bbox[1]\n",
+    "    )\n",
     "    \n",
-    "    # 旋转并返回\n",
-    "    return temp_image.rotate(rotation, expand=True, resample=Image.BILINEAR, fillcolor=(0,0,0,0))\n",
+    "    # 绘制并旋转字符\n",
+    "    temp_draw.text(position, char, font=font, fill=color)\n",
+    "    return temp_img.rotate(rotation, expand=True, fillcolor=(0, 0, 0, 0))\n",
     "\n",
-    "def _add_noise(draw, density=100):\n",
-    "    \"\"\"添加噪点\"\"\"\n",
+    "\n",
+    "def _add_noise(draw, width, height, density):\n",
+    "    \"\"\"添加随机噪点\"\"\"\n",
     "    for _ in range(density):\n",
-    "        x = random.randint(0, WIDTH)\n",
-    "        y = random.randint(0, HEIGHT)\n",
-    "        draw.point((x, y), fill=(\n",
-    "            random.randint(150, 255),\n",
-    "            random.randint(150, 255),\n",
-    "            random.randint(150, 255)\n",
-    "        ))\n",
+    "        draw.point(\n",
+    "            (random.randint(0, width-1), random.randint(0, height-1)),\n",
+    "            fill=(random.randint(100, 255), random.randint(100, 255), random.randint(100, 255))\n",
+    "        )\n",
     "\n",
-    "def _add_interference_lines(draw, num_lines=3):\n",
+    "\n",
+    "def _add_interference_lines(draw, width, height, num_lines):\n",
     "    \"\"\"添加干扰线\"\"\"\n",
     "    for _ in range(num_lines):\n",
-    "        start = random.randint(0, WIDTH), random.randint(0, HEIGHT)\n",
-    "        end = random.randint(0, WIDTH), random.randint(0, HEIGHT)\n",
-    "        draw.line([start, end], \n",
-    "                 fill=(random.randint(100, 200), \n",
-    "                      random.randint(100, 200), \n",
-    "                      random.randint(100, 200)), \n",
-    "                 width=random.randint(1, 2))\n",
+    "        points = [\n",
+    "            (random.randint(0, width//2), random.randint(0, height)),\n",
+    "            (random.randint(width//2, width), random.randint(0, height))\n",
+    "        ]\n",
+    "        draw.line(\n",
+    "            points,\n",
+    "            fill=(random.randint(50, 200), random.randint(50, 200), random.randint(50, 200)),\n",
+    "            width=random.randint(1, 2)\n",
+    "        )\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    generate_captcha()"
+    "\n",
+    "def _generate_filename(text, suffix):\n",
+    "    \"\"\"生成带时间戳的文件名\"\"\"\n",
+    "    timestamp = datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
+    "    random_str = ''.join(random.choices(string.digits, k=4))\n",
+    "    return f\"{text}_{timestamp}{random_str}.{suffix}\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 自定义配置\n",
+    "custom_config = CaptchaConfig()\n",
+    "\n",
+    "# 生成验证码\n",
+    "for i in range(4900):\n",
+    "    file_path, text = generate_captcha(custom_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.digits + string.ascii_letters"
    ]
   }
  ],
